--- a/src/main/resources/templates/views/board/writeBoard.html
+++ b/src/main/resources/templates/views/board/writeBoard.html
@@ -111,8 +111,7 @@
 		</div> 	
  	</div>
  </div>
-    <script th:src="@{js/jquery-3.7.1.min.js}"></script>
-    <script th:src="@{js/writeBoard.js}"></script>
+    <script th:src="@{/js/writeBoard.js}"></script>
  </th:block>
 </body>
 </html>
