--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -49,7 +49,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-               <a class="nav-link text-dark" th:href="@{/productList}">Order / Delivery</a>
+               <a class="nav-link text-dark" th:href="@{/cart/list}">Order / Delivery</a>
               </li>
             </ul>
           </div>
