--- a/src/main/resources/templates/views/main/mainPage.html
+++ b/src/main/resources/templates/views/main/mainPage.html
@@ -83,7 +83,7 @@
 			        </ul>
 			     </li>
 				<li class="nav-item">
-					<a class="nav-link text-white" th:href="@{/productList}">Order / Delivery</a>
+					<a class="nav-link text-white" th:href="@{/cart/list}">Order / Delivery</a>
 				</li>
 			</ul>
 			</div>
